grafana/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
spec:
  type: ClusterIP
  ports:
    - name: web
      port: 3000
      protocol: TCP
  selector:
    app: grafana
---
apiVersion: v1
kind: Service 
metadata:     
  name: grafana-istio
spec:
  type: NodePort
  ports:
  - name: istio-proxy
    port: 15020
    protocol: TCP
