grafana/ingress.yaml
---
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: grafana
spec:
  parentRefs:
  - kind: Gateway
    name: shared-gateway
    namespace: ingress
  hostnames:
  - grafana.alexos.dev
  rules:
  - backendRefs:
    - name: grafana-service
      port: 3000
